testsuite/tests/patsyn/should_fail/T12819.stderr

T12819.hs:8:1: error: [GHC-27346]
    The type family ‘F’ should have 1 argument, but has been given none
